<resources>
  <string name="app_name">NFood</string>
  <string name="invite_link">NFood</string>
  <string name="http_string"></string>
  <string name="nwork_partner">com.nsolution.nwork_partner</string>
  <string name="goong_api_key">6kYTROLjWihY7Wry29Moz5E90WY33BqVWFoQ0uH9</string>
  <string name="select_location">Select Location</string>
  <string name="select_on_map">Select On Map</string>
  <string name="location_could_not_be_found">Location could not be found</string>
  <string name="home">Home</string>
  <string name="mapbox_access_token">pk.eyJ1IjoibmdxdW9jaHV5ZGwyMyIsImEiOiJja2cwdWYzZ2swa2x3MnVxaXAwNDV6aGE3In0.W7TJV_1lWhgEbh8m8LLwzQ</string>
  <string name="notification">Notification</string>
  <string name="profile">Profile</string>
  <string name="user_profile">User Profile</string>
  <string name="setting">Settings</string>
  <string name="change_password">Change Password</string>
  <string name="my_order">My Orders</string>
  <string name="my_favourite">My Favourite</string>
  <string name="my_voucher">My Voucher</string>
  <string name="language_setting">Language Setting</string>
  <string name="notification_setting">Notification Setting</string>
  <string name="sub_title_push_notification_setting">Highly recommend to keep it on, so that you will  be notified for all order status updates</string>
  <string name="sub_title_promotion_setting">Notify me when there are promotions in the selected province/city</string>
  <string name="invite_friends">Invite Friends</string>
  <string name="order_detail">Order Detail</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="found_worker">Yaz, we had found you a worker !</string>
  <string name="select_voucher">Select Voucher</string>
  <string name="select_payment">Select Payment</string>
  <string name="total">Total</string>
  <string name="cart">Cart</string>
  <string name="order_with_group">Order With Group</string>
  <string name="could_not_find_location">We cannot find your location</string>
  <string name="rate_driver">Rate Driver</string>
  <string name="rate_restaurant">Rate Restaurant</string>
  <string name="rate_food">Rate Food</string>
  <string name="msg_token_fmt" />
  <string name="your_location">Your location</string>
  <string name="restautant_address_food">Restautant, Address, Food</string>
  <string name="search_history">Search History</string>
  <string name="delete">Delete</string>
  <string name="people_often_look_for">People often look for</string>
  <string name="filter">Filter</string>
  <string name="nearby">Nearby</string>
  <string name="top_sales">Top Sales</string>
  <string name="best_rated">Best Rated</string>
  <string name="fast">Fast</string>
  <string name="getting_started">Getting Started</string>
  <string name="your_go_to_app_for_a_hassle_free_life_we_re_here_to_help_all_your_needs_anytime_and_any_where">Your go-to app for a hassle-free life. We\'re here to help all your needs, anytime and any where</string>
  <string name="welcome_to_nfood">Welcome to NFood !</string>
  <string name="by_logging_in_or_registering_i_agree_to_our_terms_of_service_and_privacy_policy">By logging in or registering, I agree to our Terms of Service and Privacy Policy</string>
  <string name="see_all">See All</string>
  <string name="more">More</string>
  <string name="sort">Sort</string>
  <string name="accept_order">Accept Order</string>
  <string name="add_guests">Add guests</string>
  <string name="your_group_order">Your group order</string>
  <string name="join_group">Join Group</string>
  <string name="try_now">Try now</string>
  <string name="delivery_to">Delivery To</string>
  <string name="add_detail_address_to_driver">+ Add detail address to driver</string>
  <string name="delivery_time">Delivery Time</string>
  <string name="order_summary">Order Summary</string>
  <string name="ship_fee">Ship fee</string>
  <string name="use_plastic_eating_utensils">Use plastic eating utensils</string>
  <string name="thank_you_for_helping_to_reduce_plastic_waste">Thank you for helping to reduce plastic waste</string>
  <string name="delivery_to_door">Delivery to door</string>
  <string name="order">Order</string>
  <string name="subtract">-</string>
  <string name="plus">+</string>
  <string name="now">Now</string>
  <string name="schedule">Schedule</string>
  <string name="add_items">+ Add items</string>
  <string name="from_favourite_restaurant">From Favourite Restaurant</string>
  <string name="choose_from_favorite_restaurants_for_the_best_experience">Choose from favorite restaurants for the best experience</string>
  <string name="people_say">People Say</string>
  <string name="apply">Apply</string>
  <string name="search_your_location">Search your location</string>
  <string name="use_current_location">Use current location</string>
  <string name="wallet">Wallet</string>
  <string name="promotions">Promotions</string>
  <string name="deliver_with_nfood">Deliver With NFood</string>
  <string name="settings">Settings</string>
  <string name="help_center">Help Center</string>
  <string name="rate_nfood">Rate NFood</string>
  <string name="sign_out">Sign Out</string>
  <string name="enter_your_note_food">Enter your note food</string>
  <string name="note">Note</string>
  <string name="cancel_order">Cancel Order</string>
  <string name="subtotal">Subtotal</string>
  <string name="minimum">Minimum</string>
  <string name="deliver">Deliver</string>
  <string name="rating">Rating</string>
  <string name="order_again">Order Again</string>
  <string name="order_status">Order Status</string>
  <string name="order_id">Order ID</string>
  <string name="don_t_use_plastic_eating_utensils">Don\'t use plastic eating utensils</string>
  <string name="rate">Rate</string>
  <string name="loading">Loading …</string>
  <string name="user_information">User Information</string>
  <string name="please_fill_in_a_few_details_below">Please fill in a few details below</string>
  <string name="full_name">Full Name*</string>
  <string name="e_g_name">e.g Name</string>
  <string name="email">Email*</string>
  <string name="e_g_name_email_com">e.g name@email.com</string>
  <string name="next">Next</string>
  <string name="otp_code_sent">OTP code sent !</string>
  <string name="otp">OTP*</string>
  <string name="invite">Invite</string>
  <string name="so_they_can_benefit_by_experiencing_nfood_and_its_perks_just_like_you">So they can benefit by experiencing NFood and its perks , just like you</string>
  <string name="let_s_invite_friends_to_try_nfood">Let\'s invite friends to try NFood!</string>
  <string name="nguy_n_v_n_a">Nguyễn Văn A</string>
  <string name="nguyenvana_gmail_com">nguyenvana@gmail.com</string>
  <string name="phone">Phone</string>
  <string name="_081234567">081234567</string>
  <string name="save_changes">Save Changes</string>
  <string name="confirm_location">Confirm Location</string>
  <string name="share_your_reviews_herel_your_rating_and_review_will_be_kept_anonymous">Share your reviews herel. Your rating and review will be kept anonymous</string>
  <string name="skip">Skip</string>
  <string name="this_is_a_feature_that_helps_you_to_order_orders_with_friends_relatives_with_your_favorite_restaurant">This is a feature that helps you to order orders with friends, relatives with your favorite restaurant</string>
  <string name="share_the_link_to_invite_friends_to_add_their_prefernences">Share the link to invite friends to add their prefernences</string>
  <string name="account">Account</string>
  <string name="update_profile">Update Profile</string>
  <string name="choose_with_push_notifications_to_reveice_on_your_phone">Choose with push notifications to reveice on your phone</string>
  <string name="language">Language</string>
  <string name="set_up_language_for_your_app">Set up language for your app</string>
  <string name="change_user_information">Change user information</string>
  <string name="login">Login</string>
  <string name="enter_your_registered_phone_number_to_log_in">Enter your registered phone number to log in</string>
  <string name="phone_number">Phone Number*</string>
  <string name="phonenumber_placeholder">012345679</string>
  <string name="verify_code">Verify Code</string>
  <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
  <string name="start_new_order">Start New Order</string>
  <string name="start_new_order_title">Start new order ?</string>
  <string name="go_back">Go Back</string>
</resources>