<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <include
      android:id="@+id/header"
      layout="@layout/layout_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:layout_marginTop="20dp"
      android:text="@string/sort"
      android:textColor="@color/titleTextColor"
      android:textSize="22sp"
      android:textStyle="bold" />

  <RadioGroup
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:layout_marginTop="10dp">

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/nearby"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/top_sales"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/best_rated"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fast"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp" />
  </RadioGroup>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:layout_marginTop="20dp"
      android:text="@string/from_favourite_restaurant"
      android:textColor="@color/titleTextColor"
      android:textSize="22sp"
      android:textStyle="bold" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:layout_marginTop="10dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/choose_from_favorite_restaurants_for_the_best_experience"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/switchFavouriteRestaurant"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchFavouriteRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:layout_marginTop="20dp"
      android:text="@string/people_say"
      android:textColor="@color/titleTextColor"
      android:textSize="22sp"
      android:textStyle="bold" />

  <View
      android:layout_width="match_parent"
      android:layout_height="100dp" />

  <Button
      android:id="@+id/applyButton"
      style="@style/ButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/apply" />
</LinearLayout>