<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".Ui.Authentication.AddUserInformationFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/user_information"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_in_a_few_details_below"
        android:textColor="@color/textColorPrimary"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/full_name"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/enterFullName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/layout_border_item_size5"
        android:backgroundTint="@color/whitesmoke"
        android:hint="@string/e_g_name"
        android:maxLines="1"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/layout_border_item_size5"
        android:backgroundTint="@color/whitesmoke"
        android:hint="@string/e_g_name_email_com"
        android:maxLines="1"
        android:paddingStart="10dp" />

  </LinearLayout>

  <Button
      android:id="@+id/nextButton"
      style="@style/ButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:text="@string/next"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>