<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".Ui.Authentication.RequestOtpFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/login"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_phone_number_to_log_in"
        android:textColor="@color/textColorPrimary"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp">

      <com.hbb20.CountryCodePicker
          android:id="@+id/selectCountryCode"
          android:layout_width="70dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="5dp"
          android:background="@drawable/layout_border_item_size5"
          android:backgroundTint="@color/whitesmoke"
          app:ccp_defaultLanguage="VIETNAMESE"
          app:ccp_defaultPhoneCode="84"
          app:ccp_showNameCode="true" />

      <EditText
          android:id="@+id/enterPhoneNumber"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginStart="5dp"
          android:layout_weight="1"
          android:background="@drawable/layout_border_item_size5"
          android:backgroundTint="@color/whitesmoke"
          android:hint="@string/phonenumber_placeholder"
          android:inputType="phone"
          android:paddingStart="10dp"
          tools:ignore="RtlSymmetry" />
    </LinearLayout>
  </LinearLayout>

  <Button
      android:id="@+id/nextButton"
      style="@style/ButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:backgroundTint="@color/green"
      android:text="@string/next"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>