<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.InviteFriend.InviteFriend">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:navigationIcon="@drawable/icon_back" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:layout_marginTop="20dp"
      android:text="@string/let_s_invite_friends_to_try_nfood"
      android:textColor="@color/titleTextColor"
      android:textSize="25sp"
      android:textStyle="bold" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:layout_marginTop="5dp"
      android:text="@string/so_they_can_benefit_by_experiencing_nfood_and_its_perks_just_like_you"
      android:textColor="@color/textColorPrimary"
      android:textSize="18sp" />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:src="@drawable/illustration_invite_friend" />

  <Button
      android:id="@+id/inviteFriend"
      style="@style/ButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/invite" />
</LinearLayout>