<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Search.Search">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="@color/white"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:navigationIcon="@drawable/icon_back" />

  <EditText
      android:id="@+id/searchBar"
      style="@style/CustomSearchView"
      android:layout_width="0dp"
      android:layout_height="45dp"
      android:hint="@string/restautant_address_food"
      android:imeOptions="actionSearch"
      android:singleLine="true"
      app:layout_constraintBottom_toBottomOf="@id/toolbar"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@id/toolbar" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="@color/white"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/toolbar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listControlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:text="@string/search_history"
          android:textColor="@color/titleTextColor"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/deleteClick"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text="@string/delete"
          android:textColor="@color/textColorPrimary"
          android:textSize="15sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listSearchHistory"
        tools:itemCount="5"
        tools:listitem="@layout/item_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/people_often_look_for"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />


  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>